# GizzBrain

./: .gitignore  DEVLOG.md  README.md  gizzbrain_weights.pt  label_map.json  mp3_tagger.ipynb  pyproject.toml  version_tracking.md
data/metadata/: library.csv  library.parquet
gizzbrain/: __init__.py  cli.py  encoder.py  model.py  tagger.py
