[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gizzbrain"
version = "0.1.0"
description = "A neural net tool to guess and annotate live King Gizzard & The Lizard Wizard songs from the Internet Archive."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cam Nowack" }
]
dependencies = [
    "mutagen>=1.46.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel"
]

[project.scripts]
gizzbrain = "gizzbrain.cli:main"

[tool.setuptools]
packages = ["gizzbrain"]